--- a/index.html
+++ b/index.html
@@ -405,10 +405,10 @@
         <use href="./images/sprite.svg#icon-send"></use>
       </svg>
     </button>
-
   </div>
-    </div>
-    </footer>
+  </div>
+  </footer>
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button aria-label="закрити" class="close" data-modal-close>
@@ -421,37 +421,51 @@
           <h2 class="form-titel">Залиште свої дані, ми вам передзвонимо</h2>
           <div class="form-box">
           <div class="form-field">
-            <label for="name">Ім'я</label>
-            <input type="text" name="name" id="name" class="form-field-input">
+            <label for="name" class="form-field-label">Ім'я</label>
+            <span class="form-field-input-wraper">
+            <input type="text" name="name" id="name" class="form-field-input" pattern="[a-zA-Zа-яА-ЯіІїЇ]+">
              <svg aria-label="іконка персона" class="form-field-icon">
               <use href="./images/sprite.svg#icon-person-form"></use>
             </svg>
+          </span>
           </div>
 
           <div class="form-field">
-              <label for="name">Телефон</label>
-              <input type="tel" name="name" id="name" autocomplete="off" class="form-field-input" >
+              <label for="name" class="form-field-label">Телефон</label>
+              <span class="form-field-input-wraper">
+              <input 
+                  type="tel" 
+                  name="name"
+                  id="name" 
+                  required
+                  autocomplete="off" 
+                  class="form-field-input" 
+                  pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" 
+                  title="xxx-xxx-xx-xx" >
               <svg aria-label="іконка телефон" class="form-field-icon">
                 <use href="./images/sprite.svg#icon-phone-form"></use>
               </svg>
+            </span>
           </div>
                     
           <div class="form-field">
-              <label for="name">Пошта</label>
-              <input type="text" name="name" id="name" class="form-field-input">
+              <label for="name" class="form-field-label">Пошта</label>
+              <span class="form-field-input-wraper">
+              <input type="text" name="name" id="name" required class="form-field-input">
               <svg aria-label="іконка пошта" class="form-field-icon">
                 <use href="./images/sprite.svg#icon-email-form"></use>
               </svg>
+            </span>
           </div>
 
           <div class="form-field">
-            <label for="comment">Коментар</label>
-            <textarea name="comment" id="comment" rows="8" placeholder="Ведіть текст"></textarea>
+            <label class="form-field-label" for="comment">Коментар</label>
+            <textarea name="comment" id="comment" class="form-field-textarea" placeholder="Ведіть текст"></textarea>
         </div>
       </div>
 
         <label class="form-field-policy">
-            <input type="checkbox" name="policy" class="form-checkbox" />
+            <input type="checkbox" name="policy" class="form-checkbox" required />
             <span class="form-checkbox-icon">
               <svg aria-label="іконка чекену" class="checkbox-icon" width "10" height "15">
                 <use href="./images/sprite.svg#icon-check"></use>
