--- a/index.html
+++ b/index.html
@@ -435,8 +435,8 @@
               <span class="form-field-input-wraper">
               <input 
                   type="tel" 
-                  name="name"
-                  id="name" 
+                  name="tel"
+                  id="tel" 
                   required
                   autocomplete="off" 
                   class="form-field-input" 
@@ -451,7 +451,7 @@
           <div class="form-field">
               <label for="name" class="form-field-label">Пошта</label>
               <span class="form-field-input-wraper">
-              <input type="text" name="name" id="name" required class="form-field-input">
+              <input type="text" name="email" id="email" required class="form-field-input">
               <svg aria-label="іконка пошта" class="form-field-icon">
                 <use href="./images/sprite.svg#icon-email-form"></use>
               </svg>
@@ -467,8 +467,8 @@
         <label class="form-field-policy">
             <input type="checkbox" name="policy" class="form-checkbox" required />
             <span class="form-checkbox-icon">
-              <svg aria-label="іконка чекену" class="checkbox-icon" width "10" height "15">
-                <use href="./images/sprite.svg#icon-check"></use>
+              <svg aria-label="іконка чекену" class="checkbox-icon" >
+                <use class="form-check-icon" href="./images/sprite.svg#icon-check"></use>
               </svg>
             </span>
             Погоджуюсь з розсилкою та приймаю <span class="policy-contract"><a href="#" class="policy-contract-href">Умови договору</a></span>
