--- a/portfolio.html
+++ b/portfolio.html
@@ -286,18 +286,19 @@
             </ul>
           </section>
         </div>
-        <div class="footer-form">
-          <div class="form-email">
-            <p class="email-subscribe">Підписатись на розсилку</p>
-            <label for="email"></label>
-            <input type="email" name="email" id="email" placeholder="E-mail">
+        <form class="footer-form">
+          <div class="footer-form-email">
+            <p class="footer-email-subscribe">Підписатись на розсилку</p>
+            <label>
+              <input type="email" name="email"  placeholder="E-mail"> 
+            </label>
           </div>
         <button type="submit" class="footer-form-subscribe">Підписатись
           <svg aria-label="іконка підписатись" class="footer-form-subscribe-icon" >
             <use href="./images/sprite.svg#icon-send"></use>
           </svg>
         </button>
-      </div>
+        </form>
       </div>
     </footer>
   </body>
