--- a/portfolio.html
+++ b/portfolio.html
@@ -231,75 +231,73 @@
     </main>
 
     <footer class="footer">
-      <div class="container flex">
+      <div class="container" >
         <div class="footer-left-side">
-          <a href="#" class="link logo-footer"> <span class="logo">Web</span>Studio </a>
-          <address class="address">
-            <ul class="footer-list list">
-              <li class="item">
-                <a href="#" target="_blank" class="link footer-address">
-                  м. Київ, пр-т Лесі Українки, 26
-                </a>
-              </li>
-              <li class="item">
-                <a href="mailto:info@devstudio.com" class="link footer-contact">info@devstudio.com</a>
-              </li>
-              <li class="item">
-                <a href="tel:+380961111111" class="link footer-contact">+38 096 111 11 11</a>
-              </li>
-            </ul>
-          </address>
-        </div>
-    
-        <div class="footer-right-side">
-          <section class="social-networks">
-            <h3 class="social-networks-titel">Приєднуйтесь</h3>
-            <ul class="list social-networks-list">
-              <li class="item">
-                <a href="" class="social-networks-link">
-                  <svg aria-label="іконка інстаграм" class="social-networks-icon">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="item">
-                <a href="" class="social-networks-link">
-                  <svg aria-label="іконка твітер" class="social-networks-icon">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="item">
-                <a href="" class="social-networks-link">
-                  <svg aria-label="іконка фейсбук" class="social-networks-icon">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="item">
-                <a href="" class="social-networks-link">
-                  <svg aria-label="іконка лінкедін" class="social-networks-icon">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </section>
-        </div>
-        <form class="footer-form">
-          <div class="footer-form-email">
-            <p class="footer-email-subscribe">Підписатись на розсилку</p>
-            <label>
-              <input type="email" name="email"  placeholder="E-mail"> 
-            </label>
-          </div>
-        <button type="submit" class="footer-form-subscribe">Підписатись
-          <svg aria-label="іконка підписатись" class="footer-form-subscribe-icon" >
-            <use href="./images/sprite.svg#icon-send"></use>
-          </svg>
-        </button>
-        </form>
+      <a href="#" class="link logo-footer"> <span class="logo">Web</span>Studio </a>
+      <address class="address">
+        <ul class="footer-list list">
+          <li class="item">
+            <a href="#" target="_blank" class="link footer-address">
+              м. Київ, пр-т Лесі Українки, 26
+            </a>
+          </li>
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link footer-contact">info@devstudio.com</a>
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link footer-contact">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
       </div>
-    </footer>
+     
+     <div class="footer-right-side">
+        <p class="social-networks-titel">Приєднуйтесь</p>
+        <ul class="list social-networks-list" >
+          <li class="item">
+            <a href="" class="social-networks-link">
+            <svg aria-label="іконка інстаграм" class="social-networks-icon" >
+              <use href="./images/sprite.svg#icon-instagram"></use>
+            </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="social-networks-link">
+            <svg aria-label="іконка твітер" class="social-networks-icon" >
+              <use href="./images/sprite.svg#icon-twitter"></use>
+            </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="social-networks-link">
+            <svg aria-label="іконка фейсбук" class="social-networks-icon" >
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" class="social-networks-link">
+            <svg aria-label="іконка лінкедін" class="social-networks-icon" >
+              <use href="./images/sprite.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+          </li>
+        </ul>
+      </div>
+      <form class="footer-form">
+      <div class="footer-form-email">
+        <p class="footer-email-subscribe">Підписатись на розсилку</p>
+        <label>
+          <input type="email" name="email"  placeholder="E-mail"> 
+        </label>
+      </div>
+    <button type="submit" class="footer-form-subscribe">Підписатись
+      <svg aria-label="іконка підписатись" class="footer-form-subscribe-icon" >
+        <use href="./images/sprite.svg#icon-send"></use>
+      </svg>
+    </button>
+    </form>
+  </div>
+  </footer>
   </body>
 </html>
